cyclic-inheritance-error/cyclic-inheritance-error-compiletime/cyclic-inhertiance-error-compiletime.log
Class2.java:1: error: cyclic inheritance involving Class2
public class Class2 extends Class1 {
       ^
1 error
